ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order__c/EU_Open_Order__c.object-meta.xml
<CustomObject>
    <label>Open Order</label>
    <nameField>
        <displayFormat>OO-{YYYY}-{0000000}</displayFormat>
        <label>Open Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Open Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>