ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order__c/fields/EU_Open_Order__c.field-meta.xml
<CustomField>
    <fullName>EU_Open_Order__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Open Order</label>
    <type>Checkbox</type>
</CustomField>