ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order__c/fields/EU_Open_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>EU_Open_Order_Value__c</fullName>
    <label>Open Order Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>