ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order__c/fields/EU_Order_number_Reference__c.field-meta.xml
<CustomField>
    <fullName>EU_Order_number_Reference__c</fullName>
    <label>Order number Reference</label>
    <length>15</length>
    <type>Text</type>
</CustomField>