ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order__c/fields/EU_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>EU_Project_Number__c</fullName>
    <label>Project Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>