ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order__c/fields/EU_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>EU_Request_Date__c</fullName>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>